# xcell

./: .gitignore  CHANGELOG.md  README.md  pixi.toml
backend/: pyproject.toml  requirements.txt
backend/tests/: test_cluster_gene_set_auto.py  test_cluster_gene_set_mask.py  test_cluster_gene_set_route_auto.py  test_config_merge.py  test_contour_score.py  test_embedding_dims.py  test_gene_coexpression.py  test_geneset_score_matrix.py  test_ligrec.py  test_ligrec_adaptor.py  test_ligrec_routes.py  test_multicontour.py  test_multicontour_adaptor.py  test_multicontour_routes.py  test_obs_embedding.py  test_rename_genes.py  test_spatial_neighbors_sections.py  test_species_counts.py  test_toy_3sections.py  test_toy_ligrec.py  test_transfer_obs_labels.py  test_transfer_obs_labels_route.py  test_ucell_scoring.py  test_var_boolean_qc.py  test_var_column_genes.py  test_var_species_column.py  test_visium_hd.py
backend/xcell/: __init__.py  adaptor.py  config.py  config.yaml  convert_seurat.R  diffexp.py  gene_coexpression.py  gene_set_library.py  gene_set_store.py  heatmap.py  ligrec.py  main.py  multicontour.py  task_manager.py  visium_hd.py
backend/xcell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/xcell/api/: __init__.py  routes.py
backend/xcell/data/: build_lr_db.py  generate_toy_3sections.py  generate_toy_ligrec.py  lr_pairs.csv  toy_spatial.h5ad  toy_spatial_3sections.h5ad  toy_spatial_ligrec.h5ad
backend/xcell/data/gene_sets/: limb_basics.json
docs/: ROADMAP.md  config.example.yaml
frontend/: .npmrc  index.html  package-lock.json  package.json  (+3 more)
(+75 files in other folders)
